# flask_celery

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  config.yaml  pyproject.toml  requirements.txt  supervisord.conf
app/: __init__.py  routes.py  settings.py
app/celery/: celery_app.py  celeryconfig.py
app/celery/jobs/: long_task.py
app/templates/: index.html
